| Bug #14573 | Error on adding auto-increment attribute to a column containing '0' values | ||
|---|---|---|---|
| Submitted: | 2 Nov 2005 13:19 | Modified: | 22 May 2006 18:25 |
| Reporter: | Hartmut Holzgraefe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.0 and up | OS: | Any (any) |
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
[2 Nov 2005 13:19]
Hartmut Holzgraefe
[10 May 2006 17:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/6209
[12 May 2006 14:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/6303
[18 May 2006 13:32]
Paul DuBois
Cannot tell what was done here. What is the nature of the fix? Thanks.
[22 May 2006 18:25]
Paul DuBois
Noted in 5.1.11 changelog. Display better error message for <literal>ALTER TABLE</literal> operations that will result in duplicate keys due to <literal>AUTO_INCREMENT</literal> resequencing.
