bug #14573 (Error on adding auto_increment on to a column with '0' values)